Fixed Issue 326.
Added better support for passing in arguments to the sound process.